public/src/student/timeline/timeline.css
.pre-class {
  padding: 10px;
  margin-bottom: 30px;
}
.pre-class-1 {
  display: inline-block;
  width: 100%;
  padding: 100px;
  overflow-x: scroll;
}
/* Timeline */
.Timeline {
  list-style: none;
  padding: 5px !important;
}
.Timeline-item {
  border: 1px solid #777;
  border-radius: 5px;
  margin: 2em;
  padding: 2em;
  background: #fff;
  z-index: 1em;
  box-shadow: 0.3em 0.3em #bbb;
}
.Timeline .Timeline-item .timeline-badge {
  width: 2.5em;
  height: 2.5em;
  position: absolute;
  left: 0.5em;
  margin-right: 3em;
  background-color: #333;
  border: 3px solid #fff;
  z-index: 100;
  border-radius: 50%;
}
.Timeline .Timeline-item .timeline-badge.primary {
  background-color: #1f9eba;
}
.Timeline .Timeline-item .timeline-badge.info {
  background-color: #5bc0de;
}
.Timeline .Timeline-item .timeline-badge.success {
  background-color: #59ba1f;
}
.Timeline .Timeline-item .timeline-badge.warning {
  background-color: #d1bd10;
}
.Timeline .Timeline-item .timeline-badge.danger {
  background-color: #ba1f1f;
}
.timebar {
  width: 2px;
  background: #bbb;
  height: 100%;
  left: 1.5em;
  position: absolute;
}

